# paper_lerario_2022_humanoids_planning-multimodal-locomotion

./: .gitignore  README.md  environment.yml  setup.cfg
config/: ironcub.toml  ironcub_optimized_initial_position.toml
datasets/: plot_data_landing.py  plot_data_take_off.py  plot_data_take_off_and_landing.py  plot_data_transition.py
datasets/pickles/: 03-14-15-57.pickle  03-15-09-54.pickle  04-16-13-33.pickle  04-28-12-42.pickle  04-28-18-32.pickle
examples/: take_off.py
gifs/: README.md
runs/: problem_jumping.py  problem_take_off.py  problem_take_off_and_landing.py  problem_walk_fly.py
src/multi_loco_planner/: __init__.py  problem.py  replay.py  visualization.py
src/multi_loco_planner/replay/: replay.py
src/multimodal/: __init__.py  problem.py  robot.py  visualization.py
