[metadata]
name = Multimodal
description = Multimodal etc etc
author = "Giuseppe L'Erario"
author_email = gl.giuseppelerario@gmail.com
url = https://github.com/ami-iit/paper_lerario_2022_ral_planning-multimodal-locomotion
version = 0.0.1

keywords =
    robotics
    automatic-differentiation
    optimization
    casadi
    motion-planning

[options]
packages = find:
package_dir =
        = src
python_requires = >=3.8
install_requires =
        wheel
        casadi
        matplotlib
        adam[casadi]
        liecasadi
        toml
        imageio

[options.packages.find]
where = src

[options.extras_require]
test =
        pytest
        idyntree
        gym-ignition-models
        black

[tool:pytest]
addopts = --capture=no --verbose
